--- a/home.html
+++ b/home.html
@@ -16,14 +16,7 @@
               </div>
               <div class="contentinfo">
                 <div class="links">
-                    <div class="link games" id="clig">
-                      <svg xmlns="http://www.w3.org/2000/svg" id="clig" class="gml icon-tabler icon-tabler-device-gamepad" width="44" height="44" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <rect x="2" y="6" width="20" height="12" rx="2" />
-                        <path d="M6 12h4m-2 -2v4" />
-                        <line x1="15" y1="11" x2="15" y2="11.01" />
-                        <line x1="18" y1="13" x2="18" y2="13.01" />
-                      </svg>
+                     <div class="center-screen"><form><input placeholder="Search or enter in a site!"></form></div>
                     </div>
                 </div>
 
